--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = { version = "0.7.4", features = ["macros"] }
 time = { version = "0.3.34", features = ["macros"] }
 tokio = { version = "1.36.0", features = ["full"] }
 yahoo_finance_api = "2.1.0"
