--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 
 [dependencies]
 axum = { version = "0.7.4", features = ["macros"] }
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 time = { version = "0.3.34", features = ["macros"] }
 tokio = { version = "1.36.0", features = ["full"] }
-yahoo_finance_api = "2.1.0"
+yahoo_finance_api = { git = "https://github.com/meuter/yahoo_finance_api" }
