--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,7 @@ serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 time = { version = "0.3.34", features = ["macros"] }
 tokio = { version = "1.36.0", features = ["full"] }
+tower-http = { version = "0.5.2", features = ["trace"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 yahoo_finance_api = { git = "https://github.com/meuter/yahoo_finance_api" }
