--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,12 +6,14 @@ edition = "2021"
 [dependencies]
 axum = { version = "0.7.4", features = ["macros"] }
 axum-embed = "0.1.0"
+notify = "6.1.1"
 rust-embed = { version = "8.3.0", features = ["axum"] }
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 time = { version = "0.3.34", features = ["macros"] }
 tokio = { version = "1.36.0", features = ["full"] }
 tower-http = { version = "0.5.2", features = ["full"] }
+tower-livereload = "0.9.2"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
 yahoo_finance_api = { git = "https://github.com/meuter/yahoo_finance_api" }
